fix bold text on IOS devices

--- a/src/app/shared/widget/widgets/delay/widget-delay-small/widget-delay-small.component.scss
+++ b/src/app/shared/widget/widgets/delay/widget-delay-small/widget-delay-small.component.scss
@@ -14,7 +14,7 @@ sr-spinner {
     display: block;
     width: 100%;
     font-size: 40px;
-    font-weight: 1000;
+    font-weight: 900;
     margin: 30px 0 0;
     background: linear-gradient(to bottom right, #03f10e 0%, #0F3600 100%);
     background-clip: border-box;
