--- a/src/app/shared/widget/widgets/favorites/widget-favorites/widget-favorites.component.scss
+++ b/src/app/shared/widget/widgets/favorites/widget-favorites/widget-favorites.component.scss
@@ -30,7 +30,7 @@
     border-radius: 10px;
     background-color: $color-sr-first;
     color: white;
-    font-weight: 1000;
+    font-weight: 900;
     font-size: 18px;
     margin-right: 10px;
 
