--- a/src/app/shared/widget/widgets/n-o/widget-n-o-small.component.scss
+++ b/src/app/shared/widget/widgets/n-o/widget-n-o-small.component.scss
@@ -40,7 +40,7 @@ sr-spinner {
 
 .number {
     font-size: 40px;
-    font-weight: 1000;
+    font-weight: 900;
     margin: 50px 0 0;
     background-color: #000;
     background-clip: border-box;
